fix(ui): move modal close button outside card to prevent history column overlap

--- a/components/enki/enki.css
+++ b/components/enki/enki.css
@@ -380,9 +380,9 @@
 }
 
 .enki-detail-close {
-  position: absolute;
+  position: fixed;
   top: 32px;
-  right: 32px;
+  right: 40px;
   z-index: 10;
   width: 44px;
   height: 44px;
